[gd_scene load_steps=5 format=3 uid="uid://0msuab0aemv7"]

[ext_resource type="Script" path="res://World.gd" id="1_3328e"]
[ext_resource type="PackedScene" uid="uid://ctahsvj88g1om" path="res://levels/node_3d.tscn" id="1_u7w4e"]
[ext_resource type="PackedScene" uid="uid://elltatl3nvtg" path="res://Scenes/Gun Choosing Menu/gun_choosing_menu.tscn" id="3_vtygb"]
[ext_resource type="PackedScene" uid="uid://ch8a7an2nu3x5" path="res://Guis/crosshair.tscn" id="4_kw3kt"]

[node name="World" type="Node"]
script = ExtResource("1_3328e")

[node name="gun_choosing_menu" parent="." instance=ExtResource("3_vtygb")]
visible = false

[node name="crosshair" parent="." instance=ExtResource("4_kw3kt")]

[node name="Spawn" type="Node" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/Player/player.tscn")
spawn_path = NodePath("..")

[node name="Node3d" parent="." instance=ExtResource("1_u7w4e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.43953, 0, 0.414973)

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="Menu" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Menu"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="Host" type="Button" parent="Menu"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="Menu"]
layout_mode = 2
text = "Join"

[node name="IpAddress" type="LineEdit" parent="Menu"]
layout_mode = 2
placeholder_text = "Type In Address"
alignment = 1

[node name="Port" type="LineEdit" parent="Menu"]
layout_mode = 2
placeholder_text = "Type In port"
alignment = 1

[connection signal="pressed" from="Menu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/Join" to="." method="_on_join_pressed"]
